--- a/Home/templates/settings/profile.html
+++ b/Home/templates/settings/profile.html
@@ -2,80 +2,68 @@
 
 {% block content %}
 
-<div class="flex items-center justify-between mb-8">
-  <h2 class="text-2xl karnak font-semibold">Profile</h2>
-  <a href=""
-    class="hover:shadow-form rounded-md bg-blue-950 py-2 px-6 text-center text-base font-semibold text-white outline-none">
-    Edit Profile
-  </a>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
 
-<div class="flex items-center justify-center p-12">
-  <div class="flex flex-col w-full max-w-md bg-slate-100 px-8 py-5 rounded-lg shadow-lg border border-gray-200">
-    <div class="flex mb-4 justify-center">
-      <img src="{{ user.picture.url }}" draggable="false" alt="profile" class="w-32 bg-slate-900 object-cover h-32 rounded-full" />
-    </div>
-    {% comment %} <h2 class="text-2xl font-semibold text-center mt-4">{{ user.first_name }} {{ user.last_name }}</h2>
-    <p class="text-base font-medium text-center text-gray-500 mt-2">{{ user.email }}</p> {% endcomment %}
-    <div class="mx-auto mt-5 w-full max-w-[550px]">
-      <form action="" method="POST">
-        <div class="-mx-3 flex flex-wrap">
-          <div class="w-full px-3 sm:w-1/2">
-            <div class="mb-5">
-              <label for="fName" class="mb-3 block text-base cheltenham font-medium cheltenham text-slate-900">
-                First Name
-              </label>
-              <input readonly type="text" name="fName" id="fName" value="{{ user.first_name }}" placeholder="First Name"
-                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
-            </div>
-          </div>
-          <div class="w-full px-3 sm:w-1/2">
-            <div class="mb-5">
-              <label for="lName" class="mb-3 block text-base font-medium cheltenham text-slate-900">
-                Last Name
-              </label>
-              <input readonly type="text" value="{{ user.last_name }}" name="lName" id="lName" placeholder="Last Name"
-                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
-            </div>
-          </div>
-        </div>
+      {% comment %} <div class="d-flex justify-content-between mb-4">
+        <h2 class="text-2xl karnak font-semibold">Profile</h2>
+        <a href="" class="btn btn-primary">Edit Profile</a>
+      </div> {% endcomment %}
 
-        <div class="mb-5">
-          <label for="email" class="mb-3 block text-base font-medium cheltenham text-slate-900">
-            Email
-          </label>
-          <input readonly type="email" name="email" value="{{user.email}}" id="email"
-            class="w-full appearance-none rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
-        </div>
-
-        <div class="-mx-3 flex flex-wrap">
-          <div class="w-full px-3 sm:w-1/2">
-            <div class="mb-5">
-              <label for="date" class="mb-3 block text-base font-medium cheltenham text-slate-900">
-                Joined At
-              </label>
-              <input readonly type="datetime" value="{{ user.date_joined }}" name="date" id="date"
-                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+      <div class="d-flex justify-content-center p-4">
+        <div class="card w-100">
+          <div class="card-body">
+            <div class="d-flex justify-content-center mb-4">
+              <img src="{{ user.picture.url }}" draggable="false" alt="profile" class="w-32 bg-slate-900 object-cover h-32 rounded-full" />
             </div>
-          </div>
-          <div class="w-full px-3 sm:w-1/2">
-            <div class="mb-5">
-              <label for="time" class="mb-3 block text-base font-medium cheltenham text-slate-900">
-                Last Login
-              </label>
-              <input readonly type="datetime" value="{{user.last_login}}" name="time" id="time"
-                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium cheltenham text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            {% comment %} <h2 class="text-2xl font-semibold text-center mt-4">{{ user.first_name }} {{ user.last_name }}</h2>
+            <p class="text-base font-medium text-center text-gray-500 mt-2">{{ user.email }}</p> {% endcomment %}
+            <div class="mx-auto mt-5">
+              <form action="" method="POST">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="mb-3">
+                      <label for="fName" class="form-label">First Name</label>
+                      <input readonly type="text" name="fName" id="fName" value="{{ user.first_name }}" placeholder="First Name" class="form-control" />
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="mb-3">
+                      <label for="lName" class="form-label">Last Name</label>
+                      <input readonly type="text" value="{{ user.last_name }}" name="lName" id="lName" placeholder="Last Name" class="form-control" />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input readonly type="email" name="email" value="{{user.email}}" id="email" class="form-control" />
+                </div>
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="mb-3">
+                      <label for="date" class="form-label">Joined At</label>
+                      <input readonly type="datetime" value="{{ user.date_joined }}" name="date" id="date" class="form-control" />
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="mb-3">
+                      <label for="time" class="form-label">Last Login</label>
+                      <input readonly type="datetime" value="{{user.last_login}}" name="time" id="time" class="form-control" />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="d-none">
+                  <button class="btn btn-primary">Submit</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
-
-        <div class="hidden">
-          <button
-            class="hover:shadow-form rounded-md bg-[#6A64F1] py-3 px-8 text-center text-base font-semibold text-white outline-none">
-            Submit
-          </button>
-        </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
