--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.raviblog.tech/data/v2/css/rb-fonts.css">
+    <link rel="icon" href="{% static "img/IntelliTeach.png" %}">
     <link rel="stylesheet" href="{% static "public/css/base.css" %}">
     <link rel="stylesheet" href="{% static "public/css/style.css" %}">
     <title>{{title}}</title>
