--- a/teachers/templates/teachers.html
+++ b/teachers/templates/teachers.html
@@ -115,6 +115,15 @@
                                 </div>
                               {% endif %}
                             </div>
+                              <div class="mb-3">
+                                <label for="password" class="form-label">Password (optional)</label>
+                                <div class="input-group">
+                                  <input type="password" class="form-control" id="password" name="password">
+                                  <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                    <i class="fas fa-eye"></i>
+                                  </button>
+                                </div>
+                              </div>
                             <button type="submit" class="btn btn-primary">Update</button>
                           </form>
                         </div>
@@ -169,6 +178,36 @@
                     <label for="image" class="form-label">Image</label>
                     <input type="file" class="form-control" id="image" name="image" required>
                 </div>
+
+                  <div id="passError"></div>
+
+                  <div class="mb-3 mt-1 d-flex justify-content-between align-items-center">
+                    <div>
+                      <label for="password-add" class="form-label">Password</label>
+                      <div class="input-group">
+                        <input type="password" class="form-control" id="password-add" name="password" required>
+                        <button class="btn btn-outline-secondary" type="button" id="togglePassword-add">
+                          <i class="fas fa-eye"></i>
+                        </button>
+                      </div>
+                    </div>
+                    <button type="button" class="btn mt-2 btn-info" id="genPass">Genrate Password</button>
+                  </div>
+                  <script>
+                    const genPass = document.querySelector('#genPass');
+                    genPass.addEventListener('click', function (e) {
+                      const password = Math.random().toString(36).slice(-8);
+                      document.getElementById('password-add').value = password;
+                    });
+                    const togglePassword = document.querySelector('#togglePassword-add');
+                    const password = document.querySelector('#password-add');
+                    togglePassword.addEventListener('click', function (e) {
+                      const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+                      password.setAttribute('type', type);
+                      this.classList.toggle('bg-primary');
+                    });
+                  </script>
+
                 <button type="submit" class="btn btn-primary">Add</button>
             </form>
           </div>
