--- a/Home/templates/dash-layout.html
+++ b/Home/templates/dash-layout.html
@@ -47,7 +47,7 @@
                     <a href="/" class="flex ml-2 md:mr-24">
                         <img src="{% static "img/IntelliTeach.png" %}" class="h-8 rounded-full mr-3" alt="Logo" />
                         <span
-                            class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">IntelliTech</span>
+                            class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">IntelliTeach</span>
                     </a>
                     <form action="#" method="GET" class="hidden lg:block lg:pl-3.5">
                         <label for="topbar-search" class="sr-only">Search</label>
